--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -101,14 +101,26 @@
       "toggleTracing": "Включение/выключение трассировки связи с отладочными адаптерами"
     },
     "editor": {
+      "diffEditor.wordWrap2": "Строки будут обернуты в соответствии с настройкой `#editor.wordWrap#`.",
       "dirtyEncoding": "Файл загрязнен. Пожалуйста, сначала сохраните его, а затем откройте с другой кодировкой.",
-      "editor.codeActionWidget.showHeaders": "Включить/выключить показ заголовков групп в меню действий кода.",
-      "editor.experimental.pasteActions.enabled": "Включение/выключение запуска правок из расширений при вставке.",
+      "editor.accessibilitySupport0": "Используйте API-интерфейсы платформы для обнаружения подключенного устройства чтения с экрана",
+      "editor.accessibilitySupport1": "Оптимизация для использования с устройством чтения с экрана",
+      "editor.accessibilitySupport2": "Предположим, что устройство чтения с экрана не подключено",
+      "editor.bracketPairColorization.enabled": "Управляет тем, включена или нет раскраска пар скобок. Используйте `#workbench.colorCustomizations#`, чтобы переопределить цвета выделения скобок.",
+      "editor.codeActionWidget.includeNearbyQuickfixes": "Включить/выключить показ ближайшего быстрого исправления в линии, если в данный момент нет диагностики.",
+      "editor.detectIndentation": "Определяет, будут ли `#editor.tabSize#` и `#editor.insertSpaces#` автоматически определяться при открытии файла на основе его содержимого.",
       "editor.formatOnSaveMode.modificationsIfAvailable": "Попытается отформатировать только модификации (требуется контроль исходного текста). Если контроль источника не может быть использован, то будет отформатирован весь файл.",
+      "editor.hover.hidingDelay": "Управляет задержкой в миллисекундах, после которой наведение будет скрыто. Требуется, чтобы `editor.hover.sticky` был включен.",
       "editor.inlayHints.enabled1": "Подсказки инкрустации отображаются по умолчанию и скрываются при нажатии `Ctrl+Alt`.",
       "editor.inlayHints.enabled2": "Подсказки инкрустации скрыты по умолчанию и отображаются при нажатии `Ctrl+Alt`.",
+      "editor.inlayHints.fontFamily": "Управляет семейством шрифтов подсказок инлея в редакторе. Если установлено значение empty, используется `#editor.fontFamily#`.",
+      "editor.inlayHints.fontSize": "Управляет размером шрифта подсказок инлея в редакторе. По умолчанию используется `#editor.fontSize#`, если настроенное значение меньше `5` или больше размера шрифта редактора.",
+      "editor.insertSpaces": "Вставлять пробелы при нажатии клавиши `Tab`. Эта настройка переопределяется в зависимости от содержимого файла, если включена опция `#editor.detectIndentation#`.",
       "editor.quickSuggestions": "Управляет тем, должны ли предложения автоматически появляться при вводе текста. Этим можно управлять при вводе комментариев, строк и другого кода. Быстрые предложения могут быть настроены на отображение в виде призрачного текста или виджета предложений. Также обратите внимание на настройку '#editor.suggestOnTriggerCharacters#', которая определяет, будут ли появляться предложения при использовании специальных символов.",
-      "editor.suggest.matchOnWordStartOnly": "При включении фильтрации IntelliSense требуется, чтобы первый символ совпадал с началом слова, например, `c` в `Console` или `WebContext`, но _нет_ в `description`. При отключении IntelliSense показывает больше результатов, но все равно сортирует их по качеству совпадения.",
+      "editor.stickyScroll.scrollWithEditor": "Включите прокрутку виджета липкой прокрутки с помощью горизонтальной полосы прокрутки редактора.",
+      "editor.suggestFontSize": "Размер шрифта для виджета предложения. Если установлено значение `0`, используется значение `#editor.fontSize#`.",
+      "editor.suggestLineHeight": "Высота строки для виджета предложения. Если установлено значение `0`, используется значение `#editor.lineHeight#`. Минимальное значение - 8.",
+      "editor.tabSize": "Количество пробелов, которым равна табуляция. Эта настройка переопределяется в зависимости от содержимого файла, если включена функция `#editor.detectIndentation#`.",
       "files.autoSave": "Управляет [автосохранением](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) редакторов, в которых есть несохраненные изменения.",
       "files.autoSave.afterDelay": "Редактор с изменениями автоматически сохраняется по истечении настроенной `#files.autoSaveDelay#`.",
       "files.autoSave.off": "Редактор с изменениями никогда не сохраняется автоматически.",
@@ -429,6 +441,7 @@
       "profilePath": "Путь к оболочке, которую использует данный профиль.",
       "profiles": "Профили, которые должны быть представлены при создании нового терминала. Задайте свойство path вручную с помощью необязательных args.\nУстановите для существующего профиля значение `null`, чтобы скрыть профиль из списка, например: `\"{0}\": null`.",
       "rendererType": "Управляет способом отображения терминала.",
+      "rendererTypeDeprecationMessage": "Тип рендерера больше не поддерживается как опция.",
       "selectProfile": "Выберите профиль для нового терминала",
       "shell.deprecated": "Это устарело, новым рекомендуемым способом настройки оболочки по умолчанию является создание профиля терминала в 'terminal.integrated.profiles.{0}' и установка имени профиля по умолчанию в 'terminal.integrated.defaultProfile.{0}.\".",
       "shellArgsLinux": "Аргументы командной строки для использования в терминале Linux.",
