--- a/packages/core/i18n/nls.pt-pt.json
+++ b/packages/core/i18n/nls.pt-pt.json
@@ -101,14 +101,26 @@
       "toggleTracing": "Activar/desactivar as comunicações de rastreio com adaptadores de depuração"
     },
     "editor": {
+      "diffEditor.wordWrap2": "As linhas serão quebradas de acordo com a configuração `#editor.wordWrap#`.",
       "dirtyEncoding": "O ficheiro está sujo. Por favor guardá-lo primeiro antes de o reabrir com outra codificação.",
-      "editor.codeActionWidget.showHeaders": "Activar/desactivar mostrar os cabeçalhos de grupo no menu de acção de código.",
-      "editor.experimental.pasteActions.enabled": "Ativar/desativar a execução de edições de extensões ao colar.",
+      "editor.accessibilitySupport0": "Utilizar APIs da plataforma para detetar quando um leitor de ecrã está ligado",
+      "editor.accessibilitySupport1": "Otimizar para utilização com um leitor de ecrã",
+      "editor.accessibilitySupport2": "Assumir que um leitor de ecrã não está ligado",
+      "editor.bracketPairColorization.enabled": "Controla se a colorização de pares de colchetes está habilitada ou não. Utilize `#workbench.colorCustomizations#` para substituir as cores de destaque dos colchetes.",
+      "editor.codeActionWidget.includeNearbyQuickfixes": "Ativar/desativar a apresentação da reparação rápida mais próxima dentro de uma linha quando não se está a fazer um diagnóstico.",
+      "editor.detectIndentation": "Controla se `#editor.tabSize#` e `#editor.insertSpaces#` serão automaticamente detectados quando um arquivo é aberto com base no conteúdo do arquivo.",
       "editor.formatOnSaveMode.modificationsIfAvailable": "Tentará apenas formatar modificações (requer controlo da fonte). Se o controlo da fonte não puder ser utilizado, então o ficheiro inteiro será formatado.",
+      "editor.hover.hidingDelay": "Controla o atraso em milissegundos após o qual o hover é escondido. Requer que `editor.hover.sticky` esteja habilitado.",
       "editor.inlayHints.enabled1": "Dicas de Inlay estão a mostrar por defeito e escondem-se quando se segura \"Ctrl+Alt\".",
       "editor.inlayHints.enabled2": "Dicas de Inlay são ocultadas por defeito e mostram quando se mantém 'Ctrl+Alt'.",
+      "editor.inlayHints.fontFamily": "Controla a família da fonte das dicas de inlay no editor. Quando definido como vazio, a `#editor.fontFamily#` é utilizada.",
+      "editor.inlayHints.fontSize": "Controla o tamanho da fonte das dicas de inlay no editor. Como padrão o `#editor.fontSize#` é utilizado quando o valor configurado é menor que `5` ou maior que o tamanho da fonte do editor.",
+      "editor.insertSpaces": "Inserir espaços ao pressionar `Tab`. Esta configuração é substituída com base no conteúdo do ficheiro quando `#editor.detectIndentation#` está ligado.",
       "editor.quickSuggestions": "Controla se as sugestões devem aparecer automaticamente durante a dactilografia. Isto pode ser controlado para digitação de comentários, strings, e outros códigos. A sugestão rápida pode ser configurada para aparecer como texto fantasma ou com o widget de sugestão. Esteja também ciente do '#editor.suggestOnTriggerCharacters#'-setting que controla se as sugestões são accionadas por caracteres especiais.",
-      "editor.suggest.matchOnWordStartOnly": "Quando activada, a filtragem IntelliSense requer que o primeiro caractere corresponda num início de palavra, por exemplo `c` em `Console` ou `Contexto Web` mas _não_ em `descrição`. Quando desactivado, o IntelliSense mostrará mais resultados, mas ainda os classifica pela qualidade da correspondência.",
+      "editor.stickyScroll.scrollWithEditor": "Ativar a deslocação do widget de deslocação autocolante com a barra de deslocação horizontal do editor.",
+      "editor.suggestFontSize": "Tamanho da fonte para o widget de sugestão. Quando definido como `0`, o valor de `#editor.fontSize#` é utilizado.",
+      "editor.suggestLineHeight": "Altura da linha para o widget de sugestão. Quando definido como `0`, o valor de `#editor.lineHeight#` é utilizado. O valor mínimo é 8.",
+      "editor.tabSize": "O número de espaços a que uma tabulação é igual. Esta configuração é substituída com base no conteúdo do ficheiro quando `#editor.detectIndentation#` está ligado.",
       "files.autoSave": "Controla [auto guardar](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) de editores que tenham alterações não guardadas.",
       "files.autoSave.afterDelay": "Um editor com alterações é automaticamente guardado após a configuração `#files.autoSaveDelay#``.",
       "files.autoSave.off": "Um editor com alterações nunca é automaticamente guardado.",
@@ -429,6 +441,7 @@
       "profilePath": "O caminho da concha que este perfil utiliza.",
       "profiles": "Os perfis a apresentar aquando da criação de um novo terminal. Definir manualmente a propriedade do caminho com args opcionais.\nDefinir um perfil existente para `nulo` para ocultar o perfil da lista, por exemplo: `\"{0}\": nulo`.",
       "rendererType": "Controla a forma como o terminal é renderizado.",
+      "rendererTypeDeprecationMessage": "O tipo de renderizador já não é suportado como uma opção.",
       "selectProfile": "Seleccionar um perfil para o novo terminal",
       "shell.deprecated": "Isto é depreciado, a nova forma recomendada para configurar a sua shell padrão é criando um perfil de terminal em 'terminal.integrated.profiles.{0}' e definindo o seu nome de perfil como o padrão em 'terminal.integrated.defaultProfile'.{0}.",
       "shellArgsLinux": "Os argumentos de linha de comando a utilizar quando no terminal Linux.",
