--- a/packages/core/i18n/nls.zh-cn.json
+++ b/packages/core/i18n/nls.zh-cn.json
@@ -101,14 +101,26 @@
       "toggleTracing": "启用/禁用与调试适配器的跟踪通信"
     },
     "editor": {
+      "diffEditor.wordWrap2": "行将根据 `#editor.wordWrap#` 设置换行。",
       "dirtyEncoding": "该文件是脏的。请先保存它,然后用另一种编码重新打开它。",
-      "editor.codeActionWidget.showHeaders": "启用/禁用在代码动作菜单中显示组标题。",
-      "editor.experimental.pasteActions.enabled": "启用/禁用粘贴时从扩展程序运行编辑。",
+      "editor.accessibilitySupport0": "使用平台 API 检测屏幕阅读器是否已连接",
+      "editor.accessibilitySupport1": "优化屏幕阅读器的使用",
+      "editor.accessibilitySupport2": "假设未连接屏幕阅读器",
+      "editor.bracketPairColorization.enabled": "控制是否启用括号对着色。使用 `#workbench.colorCustomizations#` 覆盖括号高亮颜色。",
+      "editor.codeActionWidget.includeNearbyQuickfixes": "启用/禁用在当前未进行诊断时显示行内最近的快速修复。",
+      "editor.detectIndentation": "控制打开文件时是否根据文件内容自动检测 `#editor.tabSize#` 和 `#editor.insertSpaces#`。",
       "editor.formatOnSaveMode.modificationsIfAvailable": "将尝试只对修改部分进行格式化(需要源代码控制)。如果不能使用源码控制,那么整个文件将被格式化。",
+      "editor.hover.hidingDelay": "控制隐藏悬停后的延迟时间(毫秒)。需要启用 `editor.hover.sticky`。",
       "editor.inlayHints.enabled1": "镶嵌提示默认显示,按住 \"Ctrl+Alt \"时隐藏。",
       "editor.inlayHints.enabled2": "镶嵌提示默认是隐藏的,当按住`Ctrl+Alt`时显示。",
+      "editor.inlayHints.fontFamily": "控制编辑器中镶嵌提示的字体家族。设置为空时,将使用 `#editor.fontFamily#`。",
+      "editor.inlayHints.fontSize": "控制编辑器中镶嵌提示的字体大小。默认情况下,当配置值小于 \"5 \"或大于编辑器字体大小时,将使用 \"#editor.fontSize#\"。",
+      "editor.insertSpaces": "按 `Tab` 键时插入空格。当启用 `#editor.detectIndentation#`时,该设置会根据文件内容被覆盖。",
       "editor.quickSuggestions": "控制在输入时是否应该自动显示建议。这可以在输入评论、字符串和其他代码时加以控制。快速建议可以被配置为显示为幽灵文本或建议小部件。还要注意'#editor.suggestOnTriggerCharacters#'设置,它控制建议是否被特殊字符触发。",
-      "editor.suggest.matchOnWordStartOnly": "当启用IntelliSense过滤功能时,需要在一个词的开头匹配第一个字符,例如在 \"Console \"或 \"WebContext \"上的 \"c\",但在 \"description \"上_不需要。当禁用IntelliSense时,将显示更多的结果,但仍然按照匹配质量进行排序。",
+      "editor.stickyScroll.scrollWithEditor": "使用编辑器的水平滚动条启用粘性滚动 widget 的滚动功能。",
+      "editor.suggestFontSize": "建议 widget 的字体大小。设置为 \"0 \"时,将使用 \"#editor.fontSize#\"的值。",
+      "editor.suggestLineHeight": "建议 widget 的行高。设置为 \"0 \"时,将使用 \"#editor.lineHeight#\"的值。最小值为 8。",
+      "editor.tabSize": "制表符等于的空格数。当启用 `#editor.detectIndentation#`时,该设置会根据文件内容被覆盖。",
       "files.autoSave": "控制有未保存的修改的编辑器的[自动保存](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save)。",
       "files.autoSave.afterDelay": "在配置的 `#files.autoSaveDelay#`之后,有改动的编辑器会自动保存。",
       "files.autoSave.off": "有变化的编辑器永远不会被自动保存。",
@@ -429,6 +441,7 @@
       "profilePath": "此配置文件使用的shell的路径。",
       "profiles": "创建一个新的终端时要呈现的配置文件。用可选的args手动设置路径属性。\n将现有的配置文件设置为`null'以从列表中隐藏该配置文件,例如:`\"{0}\": null`。",
       "rendererType": "控制终端的渲染方式。",
+      "rendererTypeDeprecationMessage": "不再支持将呈现器类型作为选项。",
       "selectProfile": "为新终端选择一个配置文件",
       "shell.deprecated": "这已被废弃,新的推荐方法是在'terminal.integrated.profiles.{0}'中创建一个终端配置文件,并在'terminal.integrated.defaultProfile.{0}'中把它的配置文件名称设置为默认值,来配置你的默认外壳。",
       "shellArgsLinux": "在Linux终端时使用的命令行参数。",
